--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask~=3.1.1
-python-docx==0.8.11       # Работа с DOCX файлами (основная функциональность)
-docxtpl
-PyYAML~=6.0.2
-requests~=2.32.3
+docxcompose==1.4.0
+docxtpl==0.20.0
+Flask==3.1.1
+python_docx==1.1.2
+PyYAML==6.0.2
+PyYAML==6.0.2
+Requests==2.32.4
